nginx/ingress-final.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-routing
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # Flask app
      - path: /flask
        pathType: Prefix
        backend:
          service:
            name: two-tier-app-service
            port:
              number: 80

      # Nginx app
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80

      # Notes app (root)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notes-service
            port:
              number: 8000
